--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==4.0"
+django = "~=3.2"
+django-cors-headers = "*"
+graphene-django = "~=2.15.0"
 
 [dev-packages]
+pytest = "*"
+pytest-django = "*"
 
 [requires]
 python_version = "3.10"
