--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ strawberry-graphql-django = "*"
 pytest = "*"
 pytest-django = "*"
 black = "*"
+model-bakery = "*"
 
 [requires]
 python_version = "3.10"
