--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.10"
 django = "~=3.2"
 django-cors-headers = "*"
 psycopg2-binary = "*"
-strawberry-graphql-django = "*"
+strawberry-graphql = "*"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
