--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 # production config
 graphery/settings/prod.py
 # PostgreSQL Data
-postgres-data/
+postgre-data/
 
 # py ignore
 # Byte-compiled / optimized / DLL files
