--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "~=3.2"
 django-cors-headers = "*"
 psycopg2-binary = "*"
 strawberry-graphql = "*"
+strawberry-graphql-django = "*"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
