dep: arrange dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,10 @@ strawberry-graphql = "*"
 strawberry-graphql-django = "*"
 black = "*"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
 pytest = "*"
 pytest-django = "*"
 model-bakery = "*"
@@ -22,5 +25,5 @@ pytest-asyncio = "^0.18.2"
 pre-commit = "^2.19.0"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.1.0"]
 build-backend = "poetry.core.masonry.api"
