--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,14 @@ authors = ["Larry Zeng <graphery@reed.edu>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "~3.10"
 django = "~=3.2"
 django-cors-headers = "*"
 psycopg2-binary = "*"
 strawberry-graphql = "*"
 strawberry-graphql-django = "*"
 black = "*"
+graphery-executor = {git = "https://github.com/Reed-CompBio/GrapheryExecutor.git"}
 
 [tool.poetry.group.dev]
 optional = true
@@ -25,5 +26,5 @@ pytest-asyncio = "^0.18.2"
 pre-commit = "^2.19.0"
 
 [build-system]
-requires = ["poetry-core>=1.1.0"]
+requires = ["poetry-core>=1.1.0b2"]
 build-backend = "poetry.core.masonry.api"
