--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ strawberry-graphql = "*"
 strawberry-graphql-django = "*"
 black = "*"
 graphery-executor = {git = "https://github.com/Reed-CompBio/GrapheryExecutor.git"}
+requests = "^2.28.1"
 
 [tool.poetry.group.dev]
 optional = true
