--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "~3.10"
 django = "~=3.2"
 django-cors-headers = "*"
 psycopg2-binary = "*"
-strawberry-graphql = "0.120.0"
+strawberry-graphql = "*"
 strawberry-graphql-django = "*"
 black = "*"
 graphery-executor = {git = "https://github.com/Reed-CompBio/GrapheryExecutor.git"}
