--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pytest-django = "*"
 model-bakery = "*"
 pytest-asyncio = "^0.18.2"
 pre-commit = "^2.19.0"
+coverage = "^6.4.2"
 
 [build-system]
 requires = ["poetry-core>=1.1.0b2"]
