--- a/setups/test-env/docker-compose.yml
+++ b/setups/test-env/docker-compose.yml
@@ -1,12 +1,21 @@
 version: "3.9"  # optional since v1.27.0
 services:
   db:
-    build: .
+    build: ./postgresql
     ports:
       - "5432:5432"
     environment:
       - POSTGRES_PASSWORD=postgres
     volumes:
       - type: bind
-        source: ./postgre-data
+        source: ./volumes/postgre-data
         target: /var/lib/postgresql/data
+  redis:
+    restart: always
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - type: bind
+        source: ./volumes/redis-data
+        target: /data
