--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-json
       - id: check-yaml
+      - id: check-xml
       - id: forbid-new-submodules
       - id: mixed-line-ending
       - id: trailing-whitespace
