--- a/setups/test-env/docker-compose.yml
+++ b/setups/test-env/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.9"  # optional since v1.27.0
 services:
   db:
+    restart: on-failure
     build: ./postgresql
     ports:
       - "5432:5432"
@@ -11,8 +12,8 @@ services:
         source: ./volumes/postgre-data
         target: /var/lib/postgresql/data
   redis:
-    restart: always
-    image: redis:latest
+    restart: on-failure
+    image: redis:alpine
     ports:
       - "6379:6379"
     volumes:
