--- a/setups/test-env/postgresql/Dockerfile
+++ b/setups/test-env/postgresql/Dockerfile
@@ -1,3 +1,3 @@
 FROM library/postgres:alpine
-COPY ../init.sql /docker-entrypoint-initdb.d/
+COPY ./init.sql /docker-entrypoint-initdb.d/
 EXPOSE 5432
